--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = { version = "4.5.44", features = ["derive"] }
+colored = "3.0.0"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.142"
+uuid = {version = "1.18.0" , features = ["v4"] }
